[package]
name = "fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storage = { path = "../storage" }
types = { path = "../types" }
unleash-types = "0.2.0"
reqwest = { version = "0.11.13", features = ["json", "rustls"] }
tokio = { version = "1.23.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
