[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
telemetry = ["tonic", "opentelemetry-otlp"]

[dependencies]
types = { path = "../types" }
storage = { path = "../storage" }
fetcher = { path = "../fetcher" }
actix-web = { version = "4.2.1", features = ["rustls"] }
clap = { version = "4.0.26", features = ["env", "derive"] }
futures = "0.3.25"
opentelemetry = { version = "0.18.0", features = ["trace", "rt-tokio"]}
opentelemetry-otlp = { version = "0.11.0", features = ["tokio"], optional = true }
prometheus = { version = "0.13.3" }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.8.2", optional = true }
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter"] }
